# EuNEx

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  run.sh
.github/workflows/: deploy-hf.yml
clearing_house/: app.py  ch_ai_trader.py  ch_database.py
clearing_house/templates/: dashboard.html  login.html  portfolio.html
dashboard/: app.py  database.py
dashboard/templates/: index.html
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: developers-guide.html  developers-guide.md  process-diagram.md
examples/: ping_pong.cpp  simple_match.cpp
fix_gateway/: fix_server.py
shared/: config.py
src/: main.cpp
src/actors/: AITraderActor.cpp  AITraderActor.hpp  ClearingHouseActor.cpp  ClearingHouseActor.hpp  Events.hpp  FIXAcceptorActor.cpp  FIXAcceptorActor.hpp  FIXGatewayActor.cpp  FIXGatewayActor.hpp  MDGActor.cpp  MDGActor.hpp  MECoreActor.cpp  MECoreActor.hpp  MarketDataActor.cpp  MarketDataActor.hpp  OEGActor.cpp  OEGActor.hpp  OEGatewayActor.cpp  OEGatewayActor.hpp  OrderBookActor.cpp  OrderBookActor.hpp
src/common/: Book.cpp  Book.hpp  OrderBook.cpp  OrderBook.hpp  Types.hpp
src/engine/: SimplxShim.hpp
src/iaca/: Fragment.hpp  IacaAggregator.cpp  IacaAggregator.hpp
src/net/: SocketCompat.hpp
src/persistence/: KafkaBus.hpp  KafkaStore.hpp  PersistenceStore.hpp
src/recovery/: RecoveryProxy.cpp  RecoveryProxy.hpp
tests/: test_ai_trader.cpp  test_clearing_house.cpp  test_fix_gateway.cpp  test_matching_engine.cpp  test_orderbook.cpp  test_stop_orders.cpp  test_threaded_engine.cpp
